* Fixed z-indexes of library and properties after changes
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@10778 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/pipeline/styles/pipelines.css
+++ b/website/pipeline/styles/pipelines.css
@@ -47,6 +47,7 @@ body {
 }
 
 #libraryWrapper {
+	z-index: 3000;
 	position: fixed;
 	top: 112px;
 	left: 0;
@@ -212,6 +213,7 @@ a:hover {
 }
 
 #propertiesWrapper {
+	z-index: 4000;
 	position: fixed;
 	top: 112px;
 	right: 0;
